# italian-holidays

./: .gitignore  LICENSE  README.md  example.py  pyproject.toml  setup.py
italian_holidays/: __init__.py  italian_holidays.py
